/*
 * Copyright 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "ide_models.proto";

option java_multiple_files = true;
option java_package = "com.android.kotlin.multiplatform.models";
option java_outer_classname = "KotlinMultiplatformAndroidModelsProto";

message AndroidTarget {
    // Version of the android gradle plugin.
    optional string agp_version = 1;

    // The gradle path of the module.
    optional string project_path = 2;

    // The gradle build folder of the project.
    optional File build_dir = 3;

    // The boot classpath matching the compile target. This is typically android.jar plus
    // other optional libraries.
    repeated File boot_classpath = 4;

    // The instrumented test info if enabled.
    optional TestInfo test_info = 5;

    // The android gradle plugin flags for this project.
    optional AndroidGradlePluginProjectFlags flags = 6;

    // The lint jars that this module uses to run extra lint checks on this project.
    // This is the resolution of the `lintCheck` configuration.
    repeated File lint_checks_jars = 7;

    // Whether core library desugaring is enabled, false otherwise.
    optional bool is_core_library_desugaring_enabled = 8;

    // Returns desugar.json configuration files for library desugaring, or empty when library
    // desugaring is not enabled. Currently, there would only be one desugar.json file for the
    // entire project, but could be more in the future if r8 team decides to publish more.
    repeated File desugar_lib_config = 9;

    // Returns the optional group-id of the artifact represented by this project.
    optional string group_id = 10;

    // The build tools version used by this module.
    optional string build_tools_version = 11;

    // Files listing any D8 backported desugared methods or core library desugared methods for this
    // artifact.
    repeated File desugared_methods_files = 12;
}
